--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,14 @@ services:
       - "27017:27017"
     volumes:
       - .:/data/db
+    environment: 
+      - MONGODB_ROOT_PASSWORD=password123
   biasimpacter:
     container_name: biasimpacter
     build:
       context: ./biasimpacter
-    entrypoint: sh /biasimpacter/crontab.sh
     depends_on: 
       - mongo
     volumes:
       - .:/biasimpacter
+    command: cron && tail -f /var/log/cron.log
