--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,20 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - .:/data/db
-    environment: 
-      - MONGODB_ROOT_PASSWORD=password123
+      - ./data/mongo:/data/db
+      - ./script/:/docker-entrypoint-initdb.d/
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
+      - MONGO_HOST=${MONGO_HOST}
+      - MONGO_PORT=${MONGO_PORT}
+      - MONGO_ROOT_USER=${MONGO_ROOT_USERNAME}
+      - MONGO_ROOT_PASS=${MONGO_ROOT_PASSWORD}
+      - APP_MONGO_USER=${APP_MONGO_USER}
+      - APP_MONGO_PASS=${APP_MONGO_PASS}
+      - APP_MONGO_DB=${APP_MONGO_DB}
   biasimpacter:
+    env_file: .env
     container_name: biasimpacter
     build:
       context: ./biasimpacter
