--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "27017:27017"
     volumes:
       - ./data/mongo:/data/db
-      - ./script/:/docker-entrypoint-initdb.d/
+      - ./script/mongo/:/docker-entrypoint-initdb.d/
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
@@ -27,4 +27,5 @@ services:
       - mongo
     volumes:
       - .:/biasimpacter
-    command: cron && tail -f /var/log/cron.log
+    user: root
+    entrypoint: sh /biasimpacter/biasimpacter/crontab.sh
