--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: python
 cache: pip
 python:
-  - "3.6.5"
-before_install: cd biasimpacter
+- 3.6.5
+before_install:
+- openssl aes-256-cbc -K $encrypted_382e802577bb_key -iv $encrypted_382e802577bb_iv
+  -in id_rsa.enc -out ../.ssh/id_rsa -d
+- cd biasimpacter
 install:
-  - pip install -r requirements.txt
+- pip install -r requirements.txt
 script: pytest
