--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,10 @@ before_install:
 install:
 - pip install -r requirements.txt
 script: pytest
+deploy:
+  skip_cleanup: true
+  provider: script
+  script: deploy.sh
+  on:
+    branch: master
+
