fix path travis key

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 - 3.6.5
 before_install:
 - openssl aes-256-cbc -K $encrypted_382e802577bb_key -iv $encrypted_382e802577bb_iv
-  -in .travis/travis_rsa.enc -out travis_rsa -d
+  -in .travis/travis_rsa.enc -out .travis/travis_rsa -d
 - cd biasimpacter
 install:
 - pip install -r requirements.txt
