--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 - pip install -r requirements.txt
 script: 
   - pytest
+  - cd ${TRAVIS_BUILD_DIR}
   - eval "$(ssh-agent -s)"
   - chmod 600 .travis/travis_rsa
   - echo -e "Host $SERVER_IP_ADDRESS\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
