--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,8 @@ install:
 - pip install -r requirements.txt
 script: 
   - pytest
+after_script:
   - cd ${TRAVIS_BUILD_DIR}
-  - eval "$(ssh-agent -s)"
-  - chmod 600 .travis/travis_rsa
-  - echo -e "Host $SERVER_IP_ADDRESS\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-  - ssh-add .travis/travis_rsa
-  - ssh -i .travis/travis_rsa ${USER}@${IP} pwd
 deploy:
   skip_cleanup: true
   provider: script
