updating elk system

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,26 +89,55 @@ services:
       - "5601:5601"
       - "9200:9200"
       - "5044:5044"
-    
+    environment:
+      - ES_CONNECT_RETRY=90
+
+        #Filebeat container
   filebeat:
+    container_name: filebeat
     hostname: filebeat
-# ** Here to build the image, you need to specify your own docker hub account :
-    image: bcoste/filebeat:latest
-    build:
-      context: ./filebeat
-#Deploy is needed if you want to deploy in a Swarm
-    deploy:
-      mode: global
-      restart_policy:
-        condition: on-failure
+    user: root #To read the docker socket
+    image: "docker.elastic.co/beats/filebeat:6.7.1"
     volumes:
-# needed to persist filebeat tracking data :
-     - "filebeat_data:/usr/share/filebeat/data:rw"
-# needed to access all docker logs (read only) :
-     - "/var/lib/docker/containers:/usr/share/dockerlogs/data:ro"
-# needed to access additional informations about containers
-     - "/var/run/docker.sock:/var/run/docker.sock"
+      #Mount the Filebeat configuration so users can make edits.
+      - ./elk/beats/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml
+      #Mount the prospectors directory. Users can in turn add propspectors to this directory and they will be dynamically loaded.
+      - ./elk/beats/filebeat/prospectors.d/:/usr/share/filebeat/prospectors.d/
+      #Mount the hosts system log directory. This represents the logs of the VM hosting docker. Consumed by the Filebeat system module.
+      - /private/var/log/:/var/log/host/:ro
+      #Mount the Docker logs for indexing by the custom prospector ./config/filebeat/prospectors.d.
+      - /var/lib/docker/containers:/hostfs/var/lib/docker/containers
+      #Named volume fsdata. This is used to persist the registry file between restarts, so to avoid data duplication.
+      - filebeatdata:/usr/share/filebeat/data/
+      #Allows us to report on docker from the hosts information.
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: filebeat -e -strict.perms=false
+    restart: on-failure
+    depends_on:
+      - elk
+
+  metricbeat:
+    container_name: metricbeat
+    hostname: metricbeat
+    user: root #To read the docker socket
+    image: docker.elastic.co/beats/metricbeat:6.7.1
+    volumes:
+      #Mount the metricbeat configuration so users can make edits.
+      - ./elk/beats/metricbeat/metricbeat.yml:/usr/share/metricbeat/metricbeat.yml
+      #Mount the modules.d directory into the container. This allows user to potentially make changes to the modules and they will be dynamically loaded.
+      - ./elk/beats/metricbeat/modules.d/:/usr/share/metricbeat/modules.d/
+      #The commented sections below enable Metricbeat to monitor the Docker host rather than the Metricbeat container. These are used by the system module.
+      - /proc:/hostfs/proc:ro
+      - /sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro
+      #Allows us to report on docker from the hosts information.
+      - /var/run/docker.sock:/var/run/docker.sock
+      #We mount the host filesystem so we can report on disk usage with the system module.
+      - /:/hostfs:ro
+    command: metricbeat -e -system.hostfs=/hostfs -strict.perms=false
+    restart: on-failure
+    depends_on:
+      - elk
 
 volumes:
 # create a persistent volume for Filebeat
-  filebeat_data:
+  filebeatdata:
