--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 - 3.6.5
 before_install:
 - openssl aes-256-cbc -K $encrypted_131a1187e58f_key -iv $encrypted_131a1187e58f_iv
-  -in travis_rsa.enc -out .travis/travis_rsa -d
+  -in .travis/travis_rsa.enc -out .travis/travis_rsa -d
 - cd biasimpacter
 install:
 - pip install -r requirements.txt
