--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,14 @@ before_install:
 - cd biasimpacter
 install:
 - pip install -r requirements.txt
-script:
-- pytest
-deploy:
-  skip_cleanup: true
-  provider: script
-  script: bash ${TRAVIS_BUILD_DIR}/deploy.sh
-  on:
-    branch: master
+jobs:
+  include:
+    - stage: test
+      script: pytest
+    - stage: deploy
+      deploy:
+        skip_cleanup: true
+        provider: script
+        script: bash ${TRAVIS_BUILD_DIR}/deploy.sh
+        on:
+          branch: master
