--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ language: python
 cache: pip
 python:
 - 3.6.5
-before_install:
-- openssl aes-256-cbc -K $encrypted_131a1187e58f_key -iv $encrypted_131a1187e58f_iv
-  -in .travis/travis_rsa.enc -out .travis/travis_rsa -d
 - cd biasimpacter
 install:
 - pip install -r requirements.txt
@@ -16,6 +13,9 @@ jobs:
       deploy:
         skip_cleanup: true
         provider: script
+        before_script:
+          - openssl aes-256-cbc -K $encrypted_131a1187e58f_key -iv $encrypted_131a1187e58f_iv
+            -in .travis/travis_rsa.enc -out .travis/travis_rsa -d
         script: bash ${TRAVIS_BUILD_DIR}/deploy.sh
         on:
           branch: master
