--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 cache: pip
 python:
-- 3.6.5
-- cd biasimpacter
+  - 3.6.5
+before_install:
+  - cd biasimpacter
 install:
-- pip install -r requirements.txt
+  - pip install -r requirements.txt
 jobs:
   include:
     - stage: test
